<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visualizer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBlue"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".ui.Visualizer">
...
            android:layout_gravity="top"
            android:layout_marginRight="15dp"
            android:textSize="15sp"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:gravity="center"
        android:layout_margin="5dp">
...
            android:text="Clear"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/backgroundWhite"
            android:textSize="20sp" />
        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:padding="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/visulizer_button"
...
