...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/homepage_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="AVL Tree"
                    android:textAllCaps="false"
                    android:textColor="@color/textHomepageButtons"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/avlInfoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/ic_information" />

            </TableRow>
...
