...
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Complexities"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text"
            android:textStyle="bold"
...
