...
            android:text="Select"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:padding="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/visulizer_button"
...
